# maison-senna

./: .env-example  .gitignore  AUTHENTICATION_ANALYSIS.md  CODE_IMPROVEMENTS.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env-example  Dockerfile  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
backend/CORE/: settings.py  urls.py
backend/CORE/settings/: __init__.py  email.py  environment.py  installed_apps.py  middlewares.py  rest_framework.py
backend/accounts/: managers.py  models.py
backend/apps/accounts/: admin.py  models.py  utils.py
backend/apps/accounts/api/: authentication.py  constants.py  middlewares.py  responses.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_alter_customuser_managers.py
backend/apps/accounts/tests/: test_email_availability.py  test_google_auth_view.py  test_logout.py  test_me_view.py  test_obtain_token_pair.py  test_password_request_reset.py  test_password_reset_confirm.py  test_token_refresh.py  test_user_signup.py
backend/apps/catalog/: admin.py  exceptions.py  models.py  validators.py
backend/apps/catalog/api/: constants.py  serializers.py  urls.py  views.py
backend/apps/catalog/migrations/: 0001_initial.py  0002_alter_category_slug_alter_product_base_price_and_more.py  0003_remove_productvariation_unique_variation_options.py  0004_remove_variationoption_type_variationoption_kind_and_more.py  0007_category_cover.py  (+11 more)
backend/fixtures/: initialdata.json
backend/utils/: filtering.py  pagination.py  queryset_utils.py  sku_generator.py
(+334 files in other folders)
