[project]
name = "maison-senna"
version = "1.0"
requires-python = ">=3.14"
dependencies = [
  "django>=5.1.8",
  "django-cors-headers>=4.7.0",
  "django-environ>=0.12.0",
  "django-nested-admin>=4.1.1",
  "djangorestframework>=3.16.0",
  "djangorestframework-camel-case>=1.4.2",
  "djangorestframework-simplejwt>=5.5.0",
  "google-auth>=2.39.0",
  "mysqlclient>=2.2.7",
  "pillow>=11.2.1",
  "requests>=2.32.3",
]

[dependency-groups]
dev = [
  "django-debug-toolbar>=6.2.0",
  "django-stubs>=5.2.1",
  "django-stubs-ext>=5.2.1",
  "drf-spectacular>=0.29.0",
  "isort>=6.0.1",
]
test = [
  "coverage>=7.9.2",
  "pytest>=8.4.1",
  "pytest-django>=4.11.1",
]

[tool.ruff]
ignore = ["F901"]
